--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Color Game</string>
-    <string name="textview1">Hello World</string>
+    <string name="textview1">Box One</string>
 </resources>
